# Technopark_Algorithms_2025

./: ArcGraph.h  IGraph.cpp  IGraph.h  MatrixGraph.cpp  README.md  SetGraph.cpp  SetGraph.h  main.cpp
3.1/: ArcGraph.cpp  CMakeLists.txt  ListGraph.cpp  ListGraph.h  MatrixGraph.h
